W3CBrasil/OD4D#51 - pairing w/ @alfredosegundo

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -49,7 +49,7 @@ en:
   integration_title: "Integre-se <br />conosco"
   integration_beapartner: "Seja Um<br />parceiro"
   integration_colaborator: "Seja Um<br />colaborador"
-  share_title: "Compartilhe nas redes sociais"
+  share_title: "Compartilhe <br />nas redes sociais"
   share_quote: "Eu Defendo<br />a Internet Livre"
   cases_title: "Casos Práticos"
   cases_headline_1: "EDUCAÇÃO EM DADOS ABERTOS"
@@ -67,4 +67,5 @@ en:
   cases_tab_3: "TRÂNSITO"
   cases_tab_4: "GOVERNO"
   cases_tab_5: "SAÚDE"
+  cases_more_link: "Saiba mais sobre esse caso prático"
   partners_title: "PARCEIROS"
