W3CBrasil/OD4D#53 - i18n about page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -69,3 +69,5 @@ en:
   cases_tab_5: "SAÚDE"
   cases_more_link: "Saiba mais sobre esse caso prático"
   partners_title: "PARCEIROS"
+  home: "HOME"
+  about_title: "About OD4D Platform"
