W3CBrasil/OD4D#53 - English menu

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,9 +20,24 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  menu_1: "SOBRE A PLATAFORMA"
-  menu_1_1: "SOBRE A PLATAFORMA"
-  menu_1_2: "SOBRE A PLATAFORMA"
+  menu_1: "ABOUT THE PLATFORM"
+  menu_2: "TERMS AND CONDITIONS"
+  menu_3: "PRIVACY POLICE"
+  menu_4: "HOW TO JOIN"
+  menu_4_1: "Become a Partner"
+  menu_4_2: "Become a Contributor Writing Posts"
+  menu_5: "OPEN DATA UNIVERSE"
+  menu_5_1: "Concepts"
+  menu_5_2: "Reference material"
+  menu_5_3: "Capacity Building"
+  menu_5_4: "Glossary"
+  menu_6: "USE CASES"
+  menu_6_1: "Projects"
+  menu_6_2: "Products"
+  menu_7: "EVENTS"
+  menu_7_1: "Conferences"
+  menu_7_2: "Courses"
+  menu_7_3: "Contests"
   platform_name: "Open Data for Development"
   od4d_title: "DADOS ABERTOS PARA UM DIA MELHOR"
   od4d_description: "A maior plataforma para a nova web que queremos"
