W3CBrasil/OD4D#51 - Home, footer and header.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -39,34 +39,34 @@ en:
   menu_7_2: "Courses"
   menu_7_3: "Contests"
   platform_name: "Open Data for Development"
-  od4d_title: "DADOS ABERTOS PARA UM DIA MELHOR"
-  od4d_description: "A maior plataforma para a nova web que queremos"
-  call_title: "POR QUE ESSE ASSUNTO ME INTERESSA?"
-  im_curious: "Estou curioso"
-  im_a_developer: "Sou desenvolvedor"
-  im_a_content_producer: "Sou produtor de conteúdo"
-  latest_news: "ÚLTIMAS NOTÍCIAS"
-  featured_in: "DESTAQUES EM"
-  featured_section: "Governo"
-  watch_out: "Fique de olho"
+  od4d_title: "OPEN DATA FOR A BETTER LIFE"
+  od4d_description: "The greatest platform for new web we want"
+  call_title: "WHY THIS SUBJECT CONCERNS TO ME?"
+  im_curious: "I am curious"
+  im_a_developer: "I am a developer"
+  im_a_content_producer: "I am a content producer"
+  latest_news: "LATEST NEWS"
+  featured_in: "HIGHLIGHTS IN"
+  featured_section: "Government"
+  watch_out: "Keep an eye"
   featured_about_1: "Dados Abertos"
   featured_article_1: "Conheça mais sobre como são catalogados os dados do Governo Brasileiro"
   featured_about_2: "Futuro da Internet"
   featured_article_2: "AAI explora o poder da Open Web para transformar a África no Activate"
   featured_article_3: "AAI explora o poder da Open Web para transformar a África no Activate"
   featured_article_4: "AAI explora o poder da Open Web para transformar a África no Activate"
-  engage_us: "ENGAJE-SE"
-  in_3_parts: "em 3 partes"
-  concepts_title: "Aprenda<br />os conceitos"
-  concepts_websemantics: "Web SemÂntica"
+  engage_us: "ENGAGE YOURSELF"
+  in_3_parts: "in 3 steps"
+  concepts_title: "Learn<br />the concepts"
+  concepts_websemantics: "Semantic Web"
   concepts_rdfa: "RDF e RDFA"
-  concepts_examples: "Exemplos De Código"
-  integration_title: "Integre-se <br />conosco"
-  integration_beapartner: "Seja Um<br />parceiro"
-  integration_colaborator: "Seja Um<br />colaborador"
-  share_title: "Compartilhe <br />nas redes sociais"
-  share_quote: "Eu Defendo<br />a Internet Livre"
-  cases_title: "Casos Práticos"
+  concepts_examples: "Code Examples"
+  integration_title: "Join<br />Us"
+  integration_beapartner: "Be Our Partner"
+  integration_colaborator: "Write posts! Be a Contributor"
+  share_title: "Share <br />on social networks"
+  share_quote: "I defend<br />the Free Internet"
+  cases_title: "Use Cases"
   cases_headline_1: "EDUCAÇÃO EM DADOS ABERTOS"
   cases_text_1: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
   cases_headline_2: "PRIVACIDADE EM DADOS ABERTOS"
@@ -77,12 +77,17 @@ en:
   cases_text_4: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incidGOVERNOidunt ut labore et dolore magna aliGOVERNOqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis autGOVERNOe irure dolGOVERNOor in reprehenderit inGOVERNO voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deGOVERNOserunt mollit anim id est laborum."
   cases_headline_5: "SAÚDE EM DADOS ABERTOS"
   cases_text_5: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation uSAÚDEllamco laboris nisi utSAÚDE aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore SAÚDEeu fugiat nulla pariatur. ExcSAÚDEepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-  cases_tab_1: "EDUCAÇÃO"
-  cases_tab_2: "PRIVACIDADE"
-  cases_tab_3: "TRÂNSITO"
-  cases_tab_4: "GOVERNO"
-  cases_tab_5: "SAÚDE"
-  cases_more_link: "Saiba mais sobre esse caso prático"
-  partners_title: "PARCEIROS"
+  cases_tab_1: "EDUCATION"
+  cases_tab_2: "PRIVACY"
+  cases_tab_3: "TRANSPOSITION"
+  cases_tab_4: "GOVERNMENT"
+  cases_tab_5: "HEALTH"
+  cases_more_link: "Get to know other use cases in OD4D Platform"
+  partners_title: "PARTNERS"
   home: "HOME"
   about_title: "About OD4D Platform"
+  follow_us: "FOLLOW US"
+  likeit_shareit: "Liked it? Share it!"
+  liked_it: "LIKED IT?"
+  get_to_know_more: "Get to know more about this subject"
+  see_also: "SEE ALSO"
