W3CBrasil/OD4D#53 - Placeholder views, become partner content.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -91,3 +91,12 @@ en:
   liked_it: "LIKED IT?"
   get_to_know_more: "Get to know more about this subject"
   see_also: "SEE ALSO"
+  become_partner_title: "BECOME A PARTNER"
+  become_partner_full_title: "Invitation letter to join the OD4D platform"
+  become_contributor_title: "BECOME A CONTRIBUTOR"
+  concepts_title: "CONCEPTS"
+  ref_material_title: "REFERENCE MATERIALS"
+  capacity_building_title: "CAPACITY BUILDING"
+  glossary_title: "Glossary"
+  terms_condit_title: "TERMS AND CONDITIONS"
+  terms_condit_full_title: "GENERAL TERMS AND CONDITIONS OF USE OF THE OD4D (OPEN DATA FOR DEVELOPMENT) PLATFORM"
