--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -57,7 +57,7 @@ en:
   featured_article_4: "AAI explora o poder da Open Web para transformar a África no Activate"
   engage_us: "ENGAGE YOURSELF"
   in_3_parts: "in 3 steps"
-  concepts_title: "Learn<br />the concepts"
+  concepts_home_title: "Learn<br />the concepts"
   concepts_websemantics: "Semantic Web"
   concepts_rdfa: "RDF e RDFA"
   concepts_examples: "Code Examples"
