W3CBrasil/OD4D#53 - Translating post and listing pages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -100,3 +100,8 @@ en:
   glossary_title: "Glossary"
   terms_condit_title: "TERMS AND CONDITIONS"
   terms_condit_full_title: "GENERAL TERMS AND CONDITIONS OF USE OF THE OD4D (OPEN DATA FOR DEVELOPMENT) PLATFORM"
+  read_more: "Read more"
+  also_wrote: "ALSO WROTE"
+  published_in: "published in"
+  by_author: "by"
+  about: "about"
