add use cases links

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -49,12 +49,12 @@ en:
   featured_in: "HIGHLIGHTS IN"
   featured_section: "Government"
   watch_out: "Keep an eye"
-  featured_about_1: "Dados Abertos"
-  featured_article_1: "Conheça mais sobre como são catalogados os dados do Governo Brasileiro"
-  featured_about_2: "Futuro da Internet"
-  featured_article_2: "AAI explora o poder da Open Web para transformar a África no Activate"
-  featured_article_3: "AAI explora o poder da Open Web para transformar a África no Activate"
-  featured_article_4: "AAI explora o poder da Open Web para transformar a África no Activate"
+  featured_about_1: "OPEN DATA"
+  featured_article_1: "What is Open Data? When is data regarded as open? What types of data can be open?"
+  featured_about_2: "About the Platform"
+  featured_article_2: "Understand about the Open Data for Development Platform"
+  featured_article_3: "Check out how to be our Partner!"
+  featured_article_4: "Check out how to be a contributor writing posts!"
   engage_us: "ENGAGE YOURSELF"
   in_3_parts: "in 3 steps"
   concepts_home_title: "Learn<br />the concepts"
@@ -67,21 +67,21 @@ en:
   share_title: "Share <br />on social networks"
   share_quote: "I defend<br />the Free Internet"
   cases_title: "Use Cases"
-  cases_headline_1: "EDUCAÇÃO EM DADOS ABERTOS"
-  cases_text_1: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-  cases_headline_2: "PRIVACIDADE EM DADOS ABERTOS"
-  cases_text_2: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunPRIVACIDADEt ut labore et dolore magna alPRIVACIDADEiqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure doPRIVACIDADElor in reprPRIVACIDADEehenderit in voluptate velit esse cillum dolore euPRIVACIDADE fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunPRIVACIDADEt mollit anim id est laborum."
-  cases_headline_3: "TRÂNSITO EM DADOS ABERTOS"
-  cases_text_3: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enTRÂNSITOim ad minim veniam, quis nostrud exTRÂNSITOercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor TRÂNSITOin reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. ExcepteuTRÂNSITOr sint occaecat cupidatat non proident, sunt iTRÂNSITOn culpa qui officia deserunt mollit anim id est laborum."
-  cases_headline_4: "GOVERNO EM DADOS ABERTOS"
-  cases_text_4: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incidGOVERNOidunt ut labore et dolore magna aliGOVERNOqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis autGOVERNOe irure dolGOVERNOor in reprehenderit inGOVERNO voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deGOVERNOserunt mollit anim id est laborum."
-  cases_headline_5: "SAÚDE EM DADOS ABERTOS"
-  cases_text_5: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation uSAÚDEllamco laboris nisi utSAÚDE aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore SAÚDEeu fugiat nulla pariatur. ExcSAÚDEepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+  cases_headline_1: "PAPERS PUBLISHED ON OPEN DATA"
+  cases_text_1: "Check out the papers produced through the Open Data for Development Project: <br />Macroeconomics of open data <br />Open Data Journalism <br />Open Data in Center America <br />DataVis Interfaces <br />Parliamentary Transparency – Not Only a Data Challenge <br />Web Accessibility <br />Open Government and Web Accessibility"
+  cases_headline_2: "BRAZILIAN OPEN DATA PORTAL"
+  cases_text_2: "A data repository, the dados.gov.br portal aggregates 82 pubic datasets formerly scattered across the Internet. Launched by the Ministry of Planning, the project design also had extensive contributions from society. Moreover, the website also enables people to suggest new data for opening, to participate in Open Data events and to keep up-to-date with the portal’s development initiatives."
+  cases_headline_3: "APPS FOR DEMOCRACY"
+  cases_text_3: "The idea was born in 2008, due to DC’s government willing to ensure that both society, governments and businesses could make good use of DC.gov’s Data Catalog (that provides, for example, public information on poverty and crime indicators, in an open format)."
+  cases_headline_4: "BEST PRACTICES IN OPEN DATA: SUNLIGHT FOUNDATION"
+  cases_text_4: "It is likely that the rise of open data as a mechanism for public transparency, cooperation and innovation has not yet reached its peak , especially in countries where public administration are still in a process of intensive incorporate technologies in relations with citizenship. Something similar can happen when talking about e-government."
+  cases_headline_5: "OPEN 311"
+  cases_text_5: "Open 311 “provides open channels of communication for issues that concern public space and public services. Using a mobile device or a computer, someone can enter information (ideally with a photo) about a problem at a given location. This report is then routed to the relevant authority to address the problem."
   cases_tab_1: "EDUCATION"
-  cases_tab_2: "PRIVACY"
-  cases_tab_3: "TRANSPOSITION"
-  cases_tab_4: "GOVERNMENT"
-  cases_tab_5: "HEALTH"
+  cases_tab_2: "GOVERNMENT"
+  cases_tab_3: "PRIVACY"
+  cases_tab_4: "INITIATIVES"
+  cases_tab_5: "SERVICES"
   cases_more_link: "Get to know other use cases in OD4D Platform"
   partners_title: "PARTNERS"
   home: "HOME"
