W3CBrasil/OD4D#54 - pairing w/ @alfredosegundo - added reference materials

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -105,3 +105,5 @@ en:
   published_in: "published in"
   by_author: "by"
   about: "about"
+  article_not_found: "Article Not Found"
+  not_found: "NOT FOUND"
