W3CBrasil/OD4D#54 - pairing w/ @alfredosegundo - sections i18n

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -107,3 +107,7 @@ en:
   about: "about"
   article_not_found: "Article Not Found"
   not_found: "NOT FOUND"
+  section_ref_materials: "Reference Materials"
+  section_cap_building: "Capacity Building"
+  section_projects: "Projects"
+  section_products: "Products"
