W3CBrasil/OD4D#54 - pairing w/ @alfredosegundo - concepts as a section

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -111,3 +111,4 @@ en:
   section_cap_building: "Capacity Building"
   section_projects: "Projects"
   section_products: "Products"
+  section_concepts: "Concepts"
