W3CBrasil/OD4D#54 - pairing w/ @alfredosegundo - engage box style fix

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -57,14 +57,14 @@ en:
   featured_article_4: "Check out how to be a contributor writing posts!"
   engage_us: "ENGAGE YOURSELF"
   in_3_parts: "in 3 steps"
-  concepts_home_title: "Learn<br />the concepts"
+  concepts_home_title: "Learn the concepts"
   concepts_websemantics: "Semantic Web"
   concepts_rdfa: "RDF e RDFA"
   concepts_examples: "Code Examples"
-  integration_title: "Join<br />Us"
+  integration_title: "Join Us"
   integration_beapartner: "Be Our Partner"
   integration_colaborator: "Write posts! Be a Contributor"
-  share_title: "Share <br />on social networks"
+  share_title: "Share on social networks"
   share_quote: "I defend<br />the Free Internet"
   cases_title: "Use Cases"
   cases_headline_1: "PAPERS PUBLISHED ON OPEN DATA"
