W3CBrasil/OD4D#54 - added beta disclaimer

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -112,3 +112,4 @@ en:
   section_projects: "Projects"
   section_products: "Products"
   section_concepts: "Concepts"
+  beta_disclaimer: "[This is a beta test version. Please, give us your feedback on the platform's functionality and code: <a href='mailto:od4d@nic.br'>od4d at nic.br</a>]"
