fix terms and conditions - pairing w/ @alvarocavalcanti

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -99,6 +99,7 @@ en:
   capacity_building_title: "CAPACITY BUILDING"
   glossary_title: "Glossary"
   terms_condit_title: "TERMS AND CONDITIONS"
+  privacy_police_title: "PRIVACY POLICE"
   terms_condit_full_title: "GENERAL TERMS AND CONDITIONS OF USE OF THE OD4D (OPEN DATA FOR DEVELOPMENT) PLATFORM"
   read_more: "Read more"
   also_wrote: "ALSO WROTE"
