--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -114,3 +114,4 @@ en:
   section_products: "Products"
   section_concepts: "Concepts"
   beta_disclaimer: "[This is a beta test version. Please, give us your feedback on the platform's functionality and code: <a href='mailto:od4d@nic.br'>od4d at nic.br</a>]"
+  casein_post_form_about_tip: "Comma-separeted values"
