about semantic box

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -118,3 +118,4 @@ en:
   intro_rdfa_title: "Introduction to RDF and RDFa"
   howto_create_sempage: "How to create a semantic page"
   about_title_project: "About OD4D"
+  more_about: "More articles about"
