--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -119,3 +119,6 @@ en:
   howto_create_sempage: "How to create a semantic page"
   about_title_project: "About OD4D"
   more_about: "More articles about"
+  other_cases_part1: "Get to know other use cases"
+  others_cases_part2: "and"
+  others_cases_part3: "in OD4D Platform."
