--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -20,102 +20,104 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 pt:
-  menu_1: "BR ABOUT THE PLATFORM"
-  menu_2: "BR TERMS AND CONDITIONS"
-  menu_3: "BR PRIVACY POLICE"
-  menu_4: "BR HOW TO JOIN"
-  menu_4_1: "BR Become a Partner"
-  menu_4_2: "BR Become a Contributor Writing Posts"
-  menu_5: "BR OPEN DATA UNIVERSE"
-  menu_5_1: "BR Concepts"
-  menu_5_2: "BR Reference material"
-  menu_5_3: "BR Capacity Building"
-  menu_5_4: "BR Glossary"
-  menu_6: "BR USE CASES"
-  menu_6_1: "BR Projects"
-  menu_6_2: "BR Products"
-  menu_7: "BR EVENTS"
-  menu_7_1: "BR Conferences"
-  menu_7_2: "BR Courses"
-  menu_7_3: "BR Contests"
-  platform_name: "BR Open Data for Development"
-  od4d_title: "BR OPEN DATA FOR A BETTER LIFE"
-  od4d_description: "BR The greatest platform for new web we want"
-  call_title: "BR WHY THIS SUBJECT CONCERNS TO ME?"
-  im_curious: "BR I am curious"
-  im_a_developer: "BR I am a developer"
-  im_a_content_producer: "BR I am a content producer"
-  latest_news: "BR LATEST NEWS"
-  featured_in: "BR HIGHLIGHTS IN"
-  featured_section: "BR Government"
-  watch_out: "BR Keep an eye"
-  featured_about_1: "BR OPEN DATA"
-  featured_article_1: "BR What is Open Data? When is data regarded as open? What types of data can be open?"
-  featured_about_2: "BR About the Platform"
-  featured_article_2: "BR Understand about the Open Data for Development Platform"
-  featured_article_3: "BR Check out how to be our Partner!"
-  featured_article_4: "BR Check out how to be a contributor writing posts!"
-  engage_us: "BR ENGAGE YOURSELF"
-  in_3_parts: "BR in 3 steps"
-  concepts_home_title: "BR Learn the concepts"
-  concepts_websemantics: "BR Semantic Web"
-  concepts_rdfa: "BR RDF e RDFA"
-  concepts_examples: "BR Code Examples"
-  integration_title: "BR Join Us"
-  integration_beapartner: "BR Be Our Partner"
-  integration_colaborator: "BR Write posts! Be a Contributor"
-  share_title: "BR Share on social networks"
-  share_quote: "BR I defend<br />the Free Internet"
-  cases_title: "BR Use Cases"
-  cases_headline_1: "BR PAPERS PUBLISHED ON OPEN DATA"
-  cases_text_1: "BR Check out the papers produced through the Open Data for Development Project: <br />Macroeconomics of open data <br />Open Data Journalism <br />Open Data in Center America <br />DataVis Interfaces <br />Parliamentary Transparency – Not Only a Data Challenge <br />Web Accessibility <br />Open Government and Web Accessibility"
-  cases_headline_2: "BR BRAZILIAN OPEN DATA PORTAL"
-  cases_text_2: "BR A data repository, the dados.gov.br portal aggregates 82 pubic datasets formerly scattered across the Internet. Launched by the Ministry of Planning, the project design also had extensive contributions from society. Moreover, the website also enables people to suggest new data for opening, to participate in Open Data events and to keep up-to-date with the portal’s development initiatives."
-  cases_headline_3: "BR APPS FOR DEMOCRACY"
-  cases_text_3: "BR The idea was born in 2008, due to DC’s government willing to ensure that both society, governments and businesses could make good use of DC.gov’s Data Catalog (that provides, for example, public information on poverty and crime indicators, in an open format)."
-  cases_headline_4: "BR BEST PRACTICES IN OPEN DATA: SUNLIGHT FOUNDATION"
-  cases_text_4: "BR It is likely that the rise of open data as a mechanism for public transparency, cooperation and innovation has not yet reached its peak , especially in countries where public administration are still in a process of intensive incorporate technologies in relations with citizenship. Something similar can happen when talking about e-government."
-  cases_headline_5: "BR OPEN 311"
-  cases_text_5: "BR Open 311 “provides open channels of communication for issues that concern public space and public services. Using a mobile device or a computer, someone can enter information (ideally with a photo) about a problem at a given location. This report is then routed to the relevant authority to address the problem."
-  cases_tab_1: "BR EDUCATION"
-  cases_tab_2: "BR GOVERNMENT"
-  cases_tab_3: "BR PRIVACY"
-  cases_tab_4: "BR INITIATIVES"
-  cases_tab_5: "BR SERVICES"
-  cases_more_link: "BR Get to know other use cases in OD4D Platform"
-  partners_title: "BR PARTNERS"
-  home: "BR HOME"
-  about_title: "BR About OD4D Platform"
-  follow_us: "BR FOLLOW US"
-  likeit_shareit: "BR Liked it? Share it!"
-  liked_it: "BR LIKED IT?"
-  get_to_know_more: "BR Get to know more about this subject"
-  see_also: "BR SEE ALSO"
-  become_partner_title: "BR BECOME A PARTNER"
-  become_partner_full_title: "BR Invitation letter to join the OD4D platform"
-  become_contributor_title: "BR BECOME A CONTRIBUTOR"
-  concepts_title: "BR CONCEPTS"
-  ref_material_title: "BR REFERENCE MATERIALS"
-  capacity_building_title: "BR CAPACITY BUILDING"
-  glossary_title: "BR Glossary"
-  terms_condit_title: "BR TERMS AND CONDITIONS"
-  privacy_police_title: "BR PRIVACY POLICE"
-  terms_condit_full_title: "BR GENERAL TERMS AND CONDITIONS OF USE OF THE OD4D (OPEN DATA FOR DEVELOPMENT) PLATFORM"
-  read_more: "BR Read more"
-  also_wrote: "BR ALSO WROTE"
-  published_in: "BR published in"
-  by_author: "BR by"
-  about: "BR about"
-  article_not_found: "BR Article Not Found"
-  not_found: "BR NOT FOUND"
-  section_ref_materials: "BR Reference Materials"
-  section_cap_building: "BR Capacity Building"
-  section_projects: "BR Projects"
-  section_products: "BR Products"
-  section_concepts: "BR Concepts"
-  beta_disclaimer: "BR [This is a beta test version. Please, give us your feedback on the platform's functionality and code: <a href='mailto:od4d@nic.br'>od4d at nic.br</a>]"
-  casein_post_form_about_tip: "BR Comma-separeted values"
-  intro_rdfa_title: "Introduction to RDF and RDFa"
-  howto_create_sempage: "How to create a semantic page"
-  about_title_project: "About OD4D"
-  more_about: "More articles about"
+  menu_1: "SOBRE A PLATAFORMA"
+  menu_2: "TERMOS DE USO"
+  menu_3: "POLÍTICA DE PRIVACIDADE"
+  menu_4: "COMO PARTICIPAR"
+  menu_4_1: "Seja um Parceiro"
+  menu_4_2: "Seja um colaborador de conteúdo"
+  menu_5: "UNIVERSO DADOS ABERTOS"
+  menu_5_1: "Conceitos"
+  menu_5_2: "Material de Referência"
+  menu_5_3: "Capacitação"
+  menu_5_4: "Glossário"
+  menu_6: "CASOS PRÁTICOS"
+  menu_6_1: "Projetos"
+  menu_6_2: "Produtos"
+  menu_7: "EVENTOS"
+  menu_7_1: "Conferências"
+  menu_7_2: "Cursos"
+  menu_7_3: "Concursos"
+  platform_name: "Dados Abertos para o Desenvolvimento"
+  od4d_title: "DADOS ABERTOS PARA UM DIA A DIA MELHOR"
+  od4d_description: "A melhor platforma para a Web que queremos"
+  call_title: "POR QUE ISSO ME INTERESSA?"
+  im_curious: "Sou curioso"
+  im_a_developer: "Sou desenvolvedor"
+  im_a_content_producer: "Sou produtor de conteúdo"
+  latest_news: "ÚLTIMAS NOTÍCIAS"
+  featured_in: "DESTAQUES EM"
+  featured_section: "Governo"
+  watch_out: "Fique de olho"
+  featured_about_1: "DADOS ABERTOS"
+  featured_article_1: "O que são dados abertos? Quando um dado é considerado aberto? Que tipos de dados podem ser abertos?"
+  featured_about_2: "Sobre a Plataforma"
+  featured_article_2: "Entenda sobre a Plataforma Dados Abertos para o Desenvolvimento"
+  featured_article_3: "Veja como tornar-se um Parceiro!"
+  featured_article_4: "Veja como tornar-se um colaborador de conteúdos!"
+  engage_us: "ENGAJE-SE"
+  in_3_parts: "em três passos"
+  concepts_home_title: "Aprenda os conceitos"
+  concepts_websemantics: "Web Semântica"
+  concepts_rdfa: "RDF e RDFa"
+  concepts_examples: "Exemplos de código"
+  integration_title: "Junte-se a nós"
+  integration_beapartner: "Seja um Parceiro"
+  integration_colaborator: "Escreva posts! Seja um colaborador"
+  share_title: "Compartilhe nas redes sociais"
+  share_quote: "Eu defendo<br />a Internet livre"
+  cases_title: "Casos práticos"
+  cases_headline_1: "ARTIGOS PUBLICADOS SOBRE DADOS ABERTOS"
+  cases_text_1: "Veja os artigos produzidos pelo projeto Dados Abertos para o Desenvolvimento: <br />Macroeconomia de dados abertos <br />Jornalismos de Dados Abertos  <br />Dados Abertos na América Central <br />Interfaces DataVis <br />Transparência Parlamentar – Não apenas um desafio de dados <br />Acessibilidade na Web <br />Open Governo e Acessibilidade na Web"
+  cases_headline_2: "PORTAL BRASILEIRO DE DADOS ABERTOS"
+  cases_text_2: "A data repository, the dados.gov.br portal aggregates 82 pubic datasets formerly scattered across the Internet. Launched by the Ministry of Planning, the project design also had extensive contributions from society. Moreover, the website also enables people to suggest new data for opening, to participate in Open Data events and to keep up-to-date with the portal’s development initiatives."
+  cases_headline_3: "APPS FOR DEMOCRACY"
+  cases_text_3: "A ideia nasceu em 2008, do desejo do governo norte-americano de assegurar que a sociedade, os governos e as empresas fariam bom uso dos dados provenientes do governo dos Estados Unidos. O Catálogo de Dados disponibiliza, por exemplo, informação pública sobre pobreza e indicadores de criminalidade em formato aberto."
+  cases_headline_4: "BOAS PRÁTICAS COM DADOS ABERTOS: FUNDAÇÃO SUNLIGHT"
+  cases_text_4: "It is likely that the rise of open data as a mechanism for public transparency, cooperation and innovation has not yet reached its peak , especially in countries where public administration are still in a process of intensive incorporate technologies in relations with citizenship. Something similar can happen when talking about e-government."
+  cases_headline_5: "OPEN 311"
+  cases_text_5: "Open 311 “proporciona canais abertos de comunicação sobre espaços e serviços públicos. Com um dispositivo móvel ou um computador, qualquer pessoa pode enviar informação (idealmente uma foto) sobre um problema em determinado lugar. Esses relatos têm sido de grande relevância para as autoridades."
+  cases_tab_1: "EDUCAÇÃO"
+  cases_tab_2: "GOVERNO"
+  cases_tab_3: "PRIVACIDADE"
+  cases_tab_4: "INICIATIVAS"
+  cases_tab_5: "SERVIÇOS"
+  cases_more_link: "Veja mais casos práticos na Plataforma OD4D"
+  partners_title: "PARCEIROS"
+  home: "HOME"
+  about_title: "Sobre a Plataforma OD4D"
+  follow_us: "NOS SIGA"
+  likeit_shareit: "Gostou? Compartilhe!"
+  liked_it: "GOSTOU?"
+  get_to_know_more: "Saiba mais sobre esse assunto"
+  see_also: "Veja também"
+  become_partner_title: "SEJA UM PARCEIRO"
+  become_partner_full_title: "Convite para participar da Plataforma OD4D"
+  become_contributor_title: "SEJA UM COLABORADOR"
+  concepts_title: "CONCEITOS"
+  ref_material_title: "MATERIAIS DE REFERÊNCIA"
+  capacity_building_title: "CAPACITAÇÃO"
+  glossary_title: "Glossário"
+  terms_condit_title: "TERMOS DE USO"
+  privacy_police_title: "POLÍTICA DE PRIVACIDADE"
+  terms_condit_full_title: "TERMOS E CONDIÇÕES GERAIS DE USO DA PLATAFORMA OD4D (DADOS ABERTOS PARA O DESENVOLVIMENTO)"
+  read_more: "Leia mais"
+  also_wrote: "TAMBÉM ESCREVEU"
+  published_in: "publicado em"
+  by_author: "por"
+  about: "sobre"
+  article_not_found: "Artigo não encontrado"
+  not_found: "NÃO ENCONTRADO"
+  section_ref_materials: "Materiais de Referência"
+  section_cap_building: "Capacitação"
+  section_projects: "Projetos"
+  section_products: "Produtos"
+  section_concepts: "Conceitos"
+  beta_disclaimer: "[Esta é uma versão beta teste. Por favor, nos envie seu feedback sobre as funcionalidades e o código da plataforma: <a href='mailto:od4d@nic.br'>od4d at nic.br</a>]"
+  casein_post_form_about_tip: "Assuntos separados pro vírgula"
+  intro_rdfa_title: "Introdução ao RDF e RDFa"
+  howto_create_sempage: "Como criar uma página semântica"
+  about_title_project: "Sobre OD4D"
+  other_cases_part1: "Conheça outros casos práticos"
+  others_cases_part2: "e"
+  others_cases_part3: "na plataforma OD4D."
