--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -118,6 +118,7 @@ pt:
   intro_rdfa_title: "Introdução ao RDF e RDFa"
   howto_create_sempage: "Como criar uma página semântica"
   about_title_project: "Sobre OD4D"
+  more_about: "More articles about"
   other_cases_part1: "Conheça outros casos práticos"
   others_cases_part2: "e"
   others_cases_part3: "na plataforma OD4D."
