Added title text for social network buttons

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -122,3 +122,6 @@ es:
   other_cases_part1: "Get to know other use cases"
   others_cases_part2: "and"
   others_cases_part3: "in OD4D Platform."
+  share_twitter: "Comparta en Twitter"
+  share_facebook: "Comparta en Facebook"
+  share_gplus: "Comparta en Google Plus"
