--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -122,3 +122,6 @@ en:
   other_cases_part1: "Get to know other use cases"
   others_cases_part2: "and"
   others_cases_part3: "in OD4D Platform."
+  share_twitter: "Share on Twitter"
+  share_facebook: "Share on Facebook"
+  share_gplus: "Share on Google Plus"
