--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -122,3 +122,6 @@ pt:
   other_cases_part1: "Conheça outros casos práticos"
   others_cases_part2: "e"
   others_cases_part3: "na plataforma OD4D."
+  share_twitter: "Compartilhe no Twitter"
+  share_facebook: "Compartilhe no Facebook"
+  share_gplus: "Compartilhe no Google Plus"
