add i18n for not foud article message

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -125,3 +125,4 @@ en:
   share_twitter: "Share on Twitter"
   share_facebook: "Share on Facebook"
   share_gplus: "Share on Google Plus"
+  no_articles_found: "No articles could be found."
