--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -125,3 +125,4 @@ es:
   share_twitter: "Comparta en Twitter"
   share_facebook: "Comparta en Facebook"
   share_gplus: "Comparta en Google Plus"
+  no_articles_found: "No articles could be found."
