PT content for the homepage

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -51,6 +51,7 @@ en:
   watch_out: "Keep an eye"
   featured_about_1: "OPEN DATA"
   featured_article_1: "What is Open Data? When is data regarded as open? What types of data can be open?"
+  featured_article_1_linkid: "43"
   featured_about_2: "About the Platform"
   featured_article_2: "Understand about the Open Data for Development Platform"
   featured_article_3: "Check out how to be our Partner!"
@@ -82,6 +83,11 @@ en:
   cases_tab_3: "PRIVACY"
   cases_tab_4: "INITIATIVES"
   cases_tab_5: "SERVICES"
+  cases_tab_1_linkid: "8"
+  cases_tab_2_linkid: "33"
+  cases_tab_3_linkid: "48"
+  cases_tab_4_linkid: "1"
+  cases_tab_5_linkid: "30"
   cases_more_link: "Get to know other use cases in OD4D Platform"
   partners_title: "PARTNERS"
   home: "HOME"
