--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -51,6 +51,7 @@ es:
   watch_out: "ES Keep an eye"
   featured_about_1: "ES OPEN DATA"
   featured_article_1: "ES What is Open Data? When is data regarded as open? What types of data can be open?"
+  featured_article_1_linkid: "43"
   featured_about_2: "ES About the Platform"
   featured_article_2: "ES Understand about the Open Data for Development Platform"
   featured_article_3: "ES Check out how to be our Partner!"
@@ -82,6 +83,11 @@ es:
   cases_tab_3: "ES PRIVACY"
   cases_tab_4: "ES INITIATIVES"
   cases_tab_5: "ES SERVICES"
+  cases_tab_1_linkid: "8"
+  cases_tab_2_linkid: "33"
+  cases_tab_3_linkid: "48"
+  cases_tab_4_linkid: "1"
+  cases_tab_5_linkid: "30"
   cases_more_link: "ES Get to know other use cases in OD4D Platform"
   partners_title: "ES PARTNERS"
   home: "ES HOME"
