--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -51,6 +51,7 @@ pt:
   watch_out: "Fique de olho"
   featured_about_1: "DADOS ABERTOS"
   featured_article_1: "O que são dados abertos? Quando um dado é considerado aberto? Que tipos de dados podem ser abertos?"
+  featured_article_1_linkid: "47"
   featured_about_2: "Sobre a Plataforma"
   featured_article_2: "Entenda sobre a Plataforma Dados Abertos para o Desenvolvimento"
   featured_article_3: "Veja como tornar-se um Parceiro!"
@@ -70,9 +71,9 @@ pt:
   cases_headline_1: "ARTIGOS PUBLICADOS SOBRE DADOS ABERTOS"
   cases_text_1: "Veja os artigos produzidos pelo projeto Dados Abertos para o Desenvolvimento: <br />Macroeconomia de dados abertos <br />Jornalismos de Dados Abertos  <br />Dados Abertos na América Central <br />Interfaces DataVis <br />Transparência Parlamentar – Não apenas um desafio de dados <br />Acessibilidade na Web <br />Open Governo e Acessibilidade na Web"
   cases_headline_2: "PORTAL BRASILEIRO DE DADOS ABERTOS"
-  cases_text_2: "A data repository, the dados.gov.br portal aggregates 82 pubic datasets formerly scattered across the Internet. Launched by the Ministry of Planning, the project design also had extensive contributions from society. Moreover, the website also enables people to suggest new data for opening, to participate in Open Data events and to keep up-to-date with the portal’s development initiatives."
+  cases_text_2: "Funcionando como um repositório, o portal <a href='http://dados.gov.br' title='Portal Brasileiro de Dados Abertos'>dados.gov.br</a> agrega 82 conjuntos de dados públicos antes dispersos na internet. Lançado pelo Ministério do Planejamento, o projeto, no entanto, contou com ampla participação da sociedade em sua elaboração. Além disso, o site permite também que as pessoas possam sugerir a abertura de informações, participar de eventos sobre Dados Abertos e acompanhar as ações de desenvolvimento do portal."
   cases_headline_3: "APPS FOR DEMOCRACY"
-  cases_text_3: "A ideia nasceu em 2008, do desejo do governo norte-americano de assegurar que a sociedade, os governos e as empresas fariam bom uso dos dados provenientes do governo dos Estados Unidos. O Catálogo de Dados disponibiliza, por exemplo, informação pública sobre pobreza e indicadores de criminalidade em formato aberto."
+  cases_text_3: "A trilha sobre Privacidade no 2º Encontro Nacional de Dados Abertos (ENDA) levantou várias discussões pertinentes à aparente dicotomia entre transparência e sigilo, tratando do tema dos dados abertos e suas implicações para a privacidade e a proteção de dados pessoais ao dar publicidade a informações em formato manipulável e desagregado."
   cases_headline_4: "BOAS PRÁTICAS COM DADOS ABERTOS: FUNDAÇÃO SUNLIGHT"
   cases_text_4: "It is likely that the rise of open data as a mechanism for public transparency, cooperation and innovation has not yet reached its peak , especially in countries where public administration are still in a process of intensive incorporate technologies in relations with citizenship. Something similar can happen when talking about e-government."
   cases_headline_5: "OPEN 311"
@@ -82,6 +83,11 @@ pt:
   cases_tab_3: "PRIVACIDADE"
   cases_tab_4: "INICIATIVAS"
   cases_tab_5: "SERVIÇOS"
+  cases_tab_1_linkid: "56"
+  cases_tab_2_linkid: "93"
+  cases_tab_3_linkid: "53"
+  cases_tab_4_linkid: "1"
+  cases_tab_5_linkid: "30"
   cases_more_link: "Veja mais casos práticos na Plataforma OD4D"
   partners_title: "PARCEIROS"
   home: "HOME"
