--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -20,110 +20,110 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 es:
-  menu_1: "ES ABOUT THE PLATFORM"
-  menu_2: "ES TERMS AND CONDITIONS"
-  menu_3: "ES PRIVACY POLICE"
-  menu_4: "ES HOW TO JOIN"
-  menu_4_1: "ES Become a Partner"
-  menu_4_2: "ES Become a Contributor Writing Posts"
-  menu_5: "ES OPEN DATA UNIVERSE"
-  menu_5_1: "ES Concepts"
-  menu_5_2: "ES Reference material"
-  menu_5_3: "ES Capacity Building"
-  menu_5_4: "ES Glossary"
-  menu_6: "ES USE CASES"
-  menu_6_1: "ES Projects"
-  menu_6_2: "ES Products"
-  menu_7: "ES EVENTS"
-  menu_7_1: "ES Conferences"
-  menu_7_2: "ES Courses"
-  menu_7_3: "ES Contests"
-  platform_name: "ES Open Data for Development"
-  od4d_title: "ES OPEN DATA FOR A BETTER LIFE"
-  od4d_description: "ES The greatest platform for new web we want"
-  call_title: "ES WHY THIS SUBJECT CONCERNS TO ME?"
-  im_curious: "ES I am curious"
-  im_a_developer: "ES I am a developer"
-  im_a_content_producer: "ES I am a content producer"
-  latest_news: "ES LATEST NEWS"
-  featured_in: "ES HIGHLIGHTS IN"
-  featured_section: "ES Government"
-  watch_out: "ES Keep an eye"
-  featured_about_1: "ES OPEN DATA"
-  featured_article_1: "ES What is Open Data? When is data regarded as open? What types of data can be open?"
+  menu_1: "SOBRE LA PLATAFORMA"
+  menu_2: "CONDICIONES DE USO"
+  menu_3: "POLÍTICA DE PRIVACIDAD"
+  menu_4: "CÓMO PARTICIPAR"
+  menu_4_1: "Sea un Partner"
+  menu_4_2: "Sea un colaborador de contenido"
+  menu_5: "UNIVERSO DATOS ABIERTOS"
+  menu_5_1: "Conceptos"
+  menu_5_2: "Material de Referencia"
+  menu_5_3: "Capacitación"
+  menu_5_4: "Glosario"
+  menu_6: "CASOS PRÁCTICOS"
+  menu_6_1: "Proyectos"
+  menu_6_2: "Productos"
+  menu_7: "EVENTOS"
+  menu_7_1: "Conferencias"
+  menu_7_2: "Cursos"
+  menu_7_3: "Concursos"
+  platform_name: "Datos Abiertos para el Desarrollo"
+  od4d_title: "DATOS ABIERTOS PARA UN DIA A DIA MEJOR"
+  od4d_description: "La mejor plataforma para la Web que queremos"
+  call_title: "POR QUE ISSO ME INTERESA?"
+  im_curious: "Soy curioso"
+  im_a_developer: "Soy desarrollador"
+  im_a_content_producer: "Soy productor de contenido"
+  latest_news: "ÚLTIMAS NOTICIAS"
+  featured_in: "DESTAQUES EN"
+  featured_section: "Gobierno"
+  watch_out: "Mantenga-se atento"
+  featured_about_1: "DATOS ABIERTOS"
+  featured_article_1: "Qué son datos abiertos? Cuando un dato es considerado abierto? Qué tipos de datos pueden ser abiertos?"
   featured_article_1_linkid: "43"
-  featured_about_2: "ES About the Platform"
-  featured_article_2: "ES Understand about the Open Data for Development Platform"
-  featured_article_3: "ES Check out how to be our Partner!"
-  featured_article_4: "ES Check out how to be a contributor writing posts!"
-  engage_us: "ES ENGAGE YOURSELF"
-  in_3_parts: "ES in 3 steps"
-  concepts_home_title: "ES Learn the concepts"
-  concepts_websemantics: "ES Semantic Web"
-  concepts_rdfa: "ES RDF e RDFA"
-  concepts_examples: "ES Code Examples"
-  integration_title: "ES Join Us"
-  integration_beapartner: "ES Be Our Partner"
-  integration_colaborator: "ES Write posts! Be a Contributor"
-  share_title: "ES Share on social networks"
-  share_quote: "ES I defend<ES />the Free Internet"
-  cases_title: "ES Use Cases"
-  cases_headline_1: "ES PAPERS PUBLISHED ON OPEN DATA"
-  cases_text_1: "ES Check out the papers produced through the Open Data for Development Project: <ES />Macroeconomics of open data <ES />Open Data Journalism <ES />Open Data in Center America <ES />DataVis Interfaces <ES />Parliamentary Transparency – Not Only a Data Challenge <ES />Web Accessibility <ES />Open Government and Web Accessibility"
-  cases_headline_2: "ES BRAZILIAN OPEN DATA PORTAL"
-  cases_text_2: "ES A data repository, the dados.gov.ES portal aggregates 82 pubic datasets formerly scattered across the Internet. Launched by the Ministry of Planning, the project design also had extensive contributions from society. Moreover, the website also enables people to suggest new data for opening, to participate in Open Data events and to keep up-to-date with the portal’s development initiatives."
-  cases_headline_3: "ES APPS FOR DEMOCRACY"
-  cases_text_3: "ES The idea was born in 2008, due to DC’s government willing to ensure that both society, governments and businesses could make good use of DC.gov’s Data Catalog (that provides, for example, public information on poverty and crime indicators, in an open format)."
-  cases_headline_4: "ES BEST PRACTICES IN OPEN DATA: SUNLIGHT FOUNDATION"
-  cases_text_4: "ES It is likely that the rise of open data as a mechanism for public transparency, cooperation and innovation has not yet reached its peak , especially in countries where public administration are still in a process of intensive incorporate technologies in relations with citizenship. Something similar can happen when talking about e-government."
-  cases_headline_5: "ES OPEN 311"
-  cases_text_5: "ES Open 311 “provides open channels of communication for issues that concern public space and public services. Using a mobile device or a computer, someone can enter information (ideally with a photo) about a problem at a given location. This report is then routed to the relevant authority to address the problem."
-  cases_tab_1: "ES EDUCATION"
-  cases_tab_2: "ES GOVERNMENT"
-  cases_tab_3: "ES PRIVACY"
-  cases_tab_4: "ES INITIATIVES"
-  cases_tab_5: "ES SERVICES"
+  featured_about_2: "Sobre la Plataforma"
+  featured_article_2: "Entiende sobre la Plataforma Datos Abiertos para el Desarrollo"
+  featured_article_3: "Ve como tornar-se un Partner!"
+  featured_article_4: "Ve como tornar-se un colaborador de contenidos!"
+  engage_us: "PARTICIPA"
+  in_3_parts: "en tres pasos"
+  concepts_home_title: "Aprende los conceptos"
+  concepts_websemantics: "Web Semántica"
+  concepts_rdfa: "RDF y RDFA"
+  concepts_examples: "Ejemplos de código"
+  integration_title: "Únete a nosotros"
+  integration_beapartner: "Seja um Partner"
+  integration_colaborator: "Escribe posts! Sea un colaborador"
+  share_title: "Comparte en las redes sociales"
+  share_quote: "Yo defendo<br />la Internet libre"
+  cases_title: "Casos prácticos"
+  cases_headline_1: "PAPERS PUBLICADOS SOBRE DATOS ABIERTOS"
+  cases_text_1: "Ve los papers producidos por el proyecto Datos Abiertos para el Desarrollo: <br />Macroeconomia de datos abiertos <br />Periodismo de Datos Abiertos  <br />Datos Abiertos en la América Central <br />Interfaces DataVis <br />Transparencia Parlamentaria – No sólo un desafío de datos <br />Acessibilidade na Web <br />Gobierno Abierto y Accesibilidad en la Web"
+  cases_headline_2: "PORTAL BRASILEÑO DE DATOS ABIERTOS"
+  cases_text_2: "A data repository, the dados.gov.br portal aggregates 82 pubic datasets formerly scattered across the Internet. Launched by the Ministry of Planning, the project design also had extensive contributions from society. Moreover, the website also enables people to suggest new data for opening, to participate in Open Data events and to keep up-to-date with the portal’s development initiatives."
+  cases_headline_3: "APPS FOR DEMOCRACY"
+  cases_text_3: "A ideia nasceu em 2008, do desejo do governo norte-americano de assegurar que a sociedade, os governos e as empresas fariam bom uso dos dados provenientes do governo dos Estados Unidos. O Catálogo de Dados disponibiliza, por exemplo, informação pública sobre pobreza e indicadores de criminalidade em formato aberto."
+  cases_headline_4: "BOAS PRÁTICAS COM DADOS ABERTOS: FUNDAÇÃO SUNLIGHT"
+  cases_text_4: "It is likely that the rise of open data as a mechanism for public transparency, cooperation and innovation has not yet reached its peak , especially in countries where public administration are still in a process of intensive incorporate technologies in relations with citizenship. Something similar can happen when talking about e-government."
+  cases_headline_5: "OPEN 311"
+  cases_text_5: "Open 311 “proporciona canais abertos de comunicação sobre espaços e serviços públicos. Com um dispositivo móvel ou um computador, qualquer pessoa pode enviar informação (idealmente uma foto) sobre um problema em determinado lugar. Esses relatos têm sido de grande relevância para as autoridades."
+  cases_tab_1: "EDUCACIÓN"
+  cases_tab_2: "GOBIERNO"
+  cases_tab_3: "PRIVACIDAD"
+  cases_tab_4: "INICIATIVAS"
+  cases_tab_5: "SERVICIOS"
   cases_tab_1_linkid: "8"
   cases_tab_2_linkid: "33"
   cases_tab_3_linkid: "48"
   cases_tab_4_linkid: "1"
   cases_tab_5_linkid: "30"
-  cases_more_link: "ES Get to know other use cases in OD4D Platform"
-  partners_title: "ES PARTNERS"
-  home: "ES HOME"
-  about_title: "ES About OD4D Platform"
-  follow_us: "ES FOLLOW US"
-  likeit_shareit: "ES Liked it? Share it!"
-  liked_it: "ES LIKED IT?"
-  get_to_know_more: "ES Get to know more about this subject"
-  see_also: "ES SEE ALSO"
-  become_partner_title: "ES BECOME A PARTNER"
-  become_partner_full_title: "ES Invitation letter to join the OD4D platform"
-  become_contributor_title: "ES BECOME A CONTRIBUTOR"
-  concepts_title: "ES CONCEPTS"
-  ref_material_title: "ES REFERENCE MATERIALS"
-  capacity_building_title: "ES CAPACITY BUILDING"
-  glossary_title: "ES Glossary"
-  terms_condit_title: "ES TERMS AND CONDITIONS"
-  privacy_police_title: "ES PRIVACY POLICE"
-  terms_condit_full_title: "ES GENERAL TERMS AND CONDITIONS OF USE OF THE OD4D (OPEN DATA FOR DEVELOPMENT) PLATFORM"
-  read_more: "ES Read more"
-  also_wrote: "ES ALSO WROTE"
-  published_in: "ES published in"
-  by_author: "ES by"
-  about: "ES about"
-  article_not_found: "ES Article Not Found"
-  not_found: "ES NOT FOUND"
-  section_ref_materials: "ES Reference Materials"
-  section_cap_building: "ES Capacity Building"
-  section_projects: "ES Projects"
-  section_products: "ES Products"
-  section_concepts: "ES Concepts"
-  beta_disclaimer: "ES [This is a beta test version. Please, give us your feedback on the platform's functionality and code: <a href='mailto:od4d@nic.br'>od4d at nic.br</a>]"
-  casein_post_form_about_tip: "ES Comma-separeted values"
-  intro_rdfa_title: "Introduction to RDF and RDFa"
-  howto_create_sempage: "How to create a semantic page"
-  about_title_project: "About OD4D"
+  cases_more_link: "Ve más casos prácticos en la Plataforma OD4D"
+  partners_title: "PARTNERS"
+  home: "HOME"
+  about_title: "Sobre la Plataforma OD4D"
+  follow_us: "SÍGANOS"
+  likeit_shareit: "Gustaste? Comparte!"
+  liked_it: "GUSTASTE?"
+  get_to_know_more: "Sabe más sobre ese asunto"
+  see_also: "Veja também"
+  become_partner_title: "SE UN PARTNER"
+  become_partner_full_title: "Invitación para participar de la Plataforma OD4D"
+  become_contributor_title: "SE UN COLABORADOR"
+  concepts_title: "CONCEPTOS"
+  ref_material_title: "MATERIALES DE REFERENCIA"
+  capacity_building_title: "CAPACITACIÓN"
+  glossary_title: "Glosário"
+  terms_condit_title: "CONDICIONES DE USO"
+  privacy_police_title: "POLÍTICA DE PRIVACIDAD"
+  terms_condit_full_title: "CONDICIONES GENERALES DE USO DE LA PLATAFORMA OD4D (DATOS ABIERTOS PARA EL DESARROLLO)"
+  read_more: "Lee más"
+  also_wrote: "TAMBIÉN ESCRIBIÓ"
+  published_in: "publicado en"
+  by_author: "por"
+  about: "sobre"
+  article_not_found: "Artigo no encontrado"
+  not_found: "NO ENCONTRADO"
+  section_ref_materials: "Materiales de Referencia"
+  section_cap_building: "Capacitación"
+  section_projects: "Proyectos"
+  section_products: "Productos"
+  section_concepts: "Conceitos"
+  beta_disclaimer: "[Versíon beta teste. Por favor, nos envie tu feedback sobre as funcionalidades y el código de la plataforma: <a href='mailto:od4d@nic.br'>od4d at nic.br</a>]"
+  casein_post_form_about_tip: "Asuntos separados por coma"
+  intro_rdfa_title: "Introdución al RDF y RDFa"
+  howto_create_sempage: "Como criar una página semántica"
+  about_title_project: "Sobre OD4D"
   more_about: "More articles about"
   other_cases_part1: "Get to know other use cases"
   others_cases_part2: "and"
@@ -131,4 +131,3 @@ es:
   share_twitter: "Comparta en Twitter"
   share_facebook: "Comparta en Facebook"
   share_gplus: "Comparta en Google Plus"
-  no_articles_found: "No articles could be found."
