add language menu

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -38,6 +38,7 @@ en:
   menu_7_1: "Conferences"
   menu_7_2: "Courses"
   menu_7_3: "Contests"
+  menu_8: "LANGUAGE"
   platform_name: "Open Data for Development"
   od4d_title: "OPEN DATA FOR A BETTER LIFE"
   od4d_description: "The greatest platform for new web we want"
