--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -38,6 +38,7 @@ es:
   menu_7_1: "Conferencias"
   menu_7_2: "Cursos"
   menu_7_3: "Concursos"
+  menu_8: "IDIOMA"
   platform_name: "Datos Abiertos para el Desarrollo"
   od4d_title: "DATOS ABIERTOS PARA UN DIA A DIA MEJOR"
   od4d_description: "La mejor plataforma para la Web que queremos"
