--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -38,6 +38,7 @@ pt:
   menu_7_1: "Conferências"
   menu_7_2: "Cursos"
   menu_7_3: "Concursos"
+  menu_8: "LÍNGUA"
   platform_name: "Dados Abertos para o Desenvolvimento"
   od4d_title: "DADOS ABERTOS PARA UM DIA A DIA MELHOR"
   od4d_description: "A melhor platforma para a Web que queremos"
