added images alt text, tries to extract browsers locale before falling back to default locale

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -132,3 +132,6 @@ es:
   share_twitter: "Comparta en Twitter"
   share_facebook: "Comparta en Facebook"
   share_gplus: "Comparta en Google Plus"
+  imgalt_share_knowledge: "Share knowledge, using the platform to publish your own content"
+  imgalt_linked_data: "Join and feed the platform through linked data! Use the suggested tags to build RSS"
+  imgalt_linked_web: "Develop the OD4D platform and make the Web Linked"
