--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -132,3 +132,6 @@ en:
   share_twitter: "Share on Twitter"
   share_facebook: "Share on Facebook"
   share_gplus: "Share on Google Plus"
+  imgalt_share_knowledge: "Share knowledge, using the platform to publish your own content"
+  imgalt_linked_data: "Join and feed the platform through linked data! Use the suggested tags to build RSS"
+  imgalt_linked_web: "Develop the OD4D platform and make the Web Linked"
