updated alt text for images in portuguese

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -132,6 +132,6 @@ pt:
   share_twitter: "Compartilhe no Twitter"
   share_facebook: "Compartilhe no Facebook"
   share_gplus: "Compartilhe no Google Plus"
-  imgalt_share_knowledge: "Share knowledge, using the platform to publish your own content"
-  imgalt_linked_data: "Join and feed the platform through linked data! Use the suggested tags to build RSS"
-  imgalt_linked_web: "Develop the OD4D platform and make the Web Linked"
+  imgalt_share_knowledge: "Compartilhe conhecimento, usando a plataforma para publicar seu conteúdo"
+  imgalt_linked_data: "Participe e contribua com a plataforma através de dados conectados! Use as tags sugeridas para construir o RSS"
+  imgalt_linked_web: "Desenvolva a plataforma OD4D e faça a Web Conectada"
