--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -135,3 +135,4 @@ es:
   imgalt_share_knowledge: "Share knowledge, using the platform to publish your own content"
   imgalt_linked_data: "Join and feed the platform through linked data! Use the suggested tags to build RSS"
   imgalt_linked_web: "Develop the OD4D platform and make the Web Linked"
+  part_of: "Parte De La"
