--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -47,8 +47,8 @@ pt:
   im_a_developer: "Sou desenvolvedor"
   im_a_content_producer: "Sou produtor de conteúdo"
   latest_news: "ÚLTIMAS NOTÍCIAS"
-  featured_in: "DESTAQUES EM"
-  featured_section: "Governo"
+  featured_in: "DESTAQUES NA"
+  featured_section: "Plataforma"
   watch_out: "Fique de olho"
   featured_about_1: "DADOS ABERTOS"
   featured_article_1: "O que são dados abertos? Quando um dado é considerado aberto? Que tipos de dados podem ser abertos?"
