--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -47,8 +47,8 @@ es:
   im_a_developer: "Soy desarrollador"
   im_a_content_producer: "Soy productor de contenido"
   latest_news: "ÚLTIMAS NOTICIAS"
-  featured_in: "DESTAQUES EN"
-  featured_section: "Gobierno"
+  featured_in: "DESTAQUES EN LA"
+  featured_section: "Plataforma"
   watch_out: "Mantenga-se atento"
   featured_about_1: "DATOS ABIERTOS"
   featured_article_1: "Qué son datos abiertos? Cuando un dato es considerado abierto? Qué tipos de datos pueden ser abiertos?"
