--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,8 +47,8 @@ en:
   im_a_developer: "I am a developer"
   im_a_content_producer: "I am a content producer"
   latest_news: "LATEST NEWS"
-  featured_in: "HIGHLIGHTS IN"
-  featured_section: "Government"
+  featured_in: "HIGHLIGHTS IN THE"
+  featured_section: "Platform"
   watch_out: "Keep an eye"
   featured_about_1: "OPEN DATA"
   featured_article_1: "What is Open Data? When is data regarded as open? What types of data can be open?"
