--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -132,7 +132,7 @@ es:
   share_twitter: "Comparta en Twitter"
   share_facebook: "Comparta en Facebook"
   share_gplus: "Comparta en Google Plus"
-  imgalt_share_knowledge: "Share knowledge, using the platform to publish your own content"
-  imgalt_linked_data: "Join and feed the platform through linked data! Use the suggested tags to build RSS"
-  imgalt_linked_web: "Develop the OD4D platform and make the Web Linked"
+  imgalt_share_knowledge: "Comparte conocimientos, utilizando la plataforma para publicar su contenido"
+  imgalt_linked_data: "Participa y contribuye con la plataforma a través de los datos conectados! Usa las tags sugeridas para construir el RSS"
+  imgalt_linked_web: "Desarrolla la plataforma OD4D y haz la Web Conectada"
   part_of: "Parte De La"
